SkyXplore - Proper messaging around Friendships